JSON API routes changed. API moved into /v1/ URL path
